--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "~4.21.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "phbk": "file:"
+    "phbk": "file:",
+    "twilio": "^5.4.3"
   }
 }
